# modernize-attrs

./: README.md  pyproject.toml  tests.py
.github/: copilot-instructions.md
src/modernize_attrs/: __init__.py  __main__.py
src/translate_dataclasses/: __init__.py
