[project]
name = "modernize-attrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Berthias", email = "jvberthias@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.5.1",
]

[project.scripts]
modernize-attrs = "modernize_attrs.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests.py",
]

[dependency-groups]
dev = [
    "attrs>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
